# pylrbms

./: .gitignore  .gitmodules  .travis.add_swap.bash  .travis.after_script.bash  .travis.script.bash  .travis.yml  .travis.yml.py  CMakeLists.txt  EOC.py  LICENSE  OS2015_academic_problem.py  OS2015_convergence_study.py  OS2015_convergence_study_as_reduced.py  README.md  artificial_channels_problem.py  config.h.cmake  convergence_study.py  discretize_elliptic.py  discretize_elliptic_block_swipdg.py  discretize_elliptic_swipdg.py  discretize_parabolic.py  discretize_parabolic_block_swipdg.py  discretize_parabolic_swipdg.py  dune.module  external-libraries.cfg  linearelliptic_block_swipdg.py  linearelliptic_block_swipdg_decomp.py  local_thermalblock_problem.py  lrbms.py  offline.py  online_adaptive_lrbms.py  online_enrichment.py  parabolic.py  parabolic_convergence_study.py  pylrbms.pc.in  start_notebook_server.py  thermalblock_problem.py  threadpool_test.py
arch-minimal/: PATH.sh  external-libraries.cfg
cmake/modules/: CMakeLists.txt
debian-full/: PATH.sh  external-libraries.cfg
debian-minimal/: PATH.sh  external-libraries.cfg
dune/pylrbms/test/: CMakeLists.txt  empty.cc
local/: .gitignore
manjaro/: PATH.sh  external-libraries.cfg
manylinux-full/: PATH.sh  external-libraries.cfg
manylinux-minimal/: PATH.sh  external-libraries.cfg
notebooks/: block_swipdg.ipynb  block_swipdg__error_estimation__nonparametric.ipynb  block_swipdg__error_estimation__offline_online_decomposed.ipynb  block_swipdg__error_estimation__parametric.ipynb  cg_fem_approximation_properties.ipynb  linearelliptic_block_swipdg.ipynb  linearelliptic_block_swipdg__fluxreconstruction_estimators.ipynb  linearelliptic_cg.ipynb  linearelliptic_swipdg.ipynb  linearelliptic_swipdg_fluxreconstruction_estimators.ipynb  optimization.ipynb  optimization__FVCA8_talk.ipynb  optimization__OS2015_academic_problem.ipynb  simple_thermalblock_swipdg_example.ipynb  swipdg__error_estimation.ipynb
python/: .gitignore  CMakeLists.txt  setup.cfg  setup.py  setup.py.in
python/scripts/: OS2015_academic_problem.py  OS2015_convergence_study.py  OS2015_convergence_study_as_reduced.py  artificial_channels_problem.py  discretize_elliptic_block_swipdg.py  discretize_parabolic_swipdg.py  linearelliptic_block_swipdg_decomp.py  mpi_elliptic.py  online_adaptive_lrbms.py  parabolic.py  parabolic_convergence_study.py
python/test/: base.py  mpitest.py
scripts/: OS2015_academic_problem.py  discretize_elliptic.py  linearelliptic_block_swipdg.py  linearelliptic_block_swipdg_decomp.py  online_adaptive_lrbms.py  online_enrichment.py  thermalblock_problem.py
(+18 files in other folders)
